package at.fhtw.openscrum.scrum.domain.model.project

import java.util.UUID

data class ProjectId(
    val token: UUID,
)
