package at.fhtw.openscrum.scrum.domain.model.sprint

enum class SprintBacklogItemStatus {
    TO_DO,
    IN_PROGRESS,
    DONE,
}
